--- a/package.json
+++ b/package.json
@@ -1,8 +1,44 @@
 {
   "name": "dspasibenko",
   "version": "1.0.0",
+  "scripts": {
+    "build": "webpack"
+  },
   "dependencies": {
     "jquery": "^3.3.1",
-    "normalize.css": "^8.0.1"
+    "jquery-smooth-scroll": "^2.2.0",
+    "lazysizes": "^4.1.4",
+    "normalize.css": "^8.0.0",
+    "picturefill": "^3.0.3",
+    "waypoints": "^4.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "autoprefixer": "^9.1.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-es2015": "^6.24.1",
+    "browser-sync": "^2.26.3",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-modernizr": "^3.1.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-rev": "^9.0.0",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-svg2png": "^2.0.2",
+    "gulp-uglify": "^3.0.1",
+    "gulp-usemin": "^0.3.29",
+    "gulp-watch": "^5.0.1",
+    "postcss-hexrgba": "^1.0.1",
+    "postcss-import": "^12.0.0",
+    "postcss-mixins": "^6.2.0",
+    "postcss-nested": "^3.0.0",
+    "postcss-simple-vars": "^4.1.0",
+    "webpack": "^4.21.0",
+    "webpack-cli": "^3.1.2"
   }
 }
